--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>  
     </div>  
 
-    <button id="saveBtn">Click to Save</button>  
+    <button id="saveBtn"><b>Click to Save</b></button>  
 
     <script src="script.js"></script>  
 </body>  
